# vigia-argus

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  release.yml
tests/: test_build.py
vigia_argus/: __init__.py  argus_blocks.py
vigia_argus/cfg/: argus_v8x.yaml  argus_v8x_p2.yaml
